# QualityControl

Framework/: CMakeLists.txt  tpcQCPID.json  tpcQCTPCTrackQA.json
Framework/src/: runTPCQCPID.cxx  runTPCQCTPCTrackQA.cxx
Modules/TPC/: CMakeLists.txt
Modules/TPC/include/TPC/: CalDetPublisher.h  Clusters.h  LinkDef.h  PID.h  TPCTrackQA.h
Modules/TPC/run/: runTPCQCTrackReader.cxx  tpcQCCalDetPublisher.json  tpcQCClusters_direct.json  tpcQCClusters_sampled.json  tpcQCPID.json  tpcQCPID_direct.json  tpcQCPID_sampled.json
Modules/TPC/src/: CalDetPublisher.cxx  Clusters.cxx  PID.cxx  TPCTrackQA.cxx  tpc-reco-workflow.cxx
Modules/TPC/test/: .testQcTPC.cxx.swp
